2005-04-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c: Preliminary support for non black and white
	background and grid. The colours are still awful though.

2005-04-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: 
	* ui.h:
	* game.c: Remove the ball count message and just use the points
	message. This solves the criticism in bug #172359 via a different
	route.
	
	* help/C/same-gnome.xml: 
	* drawing.h: 
	* same-gnome.h: 
	* ui.c:
	* drawing.c: Install a fast-animation option.

2005-04-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* same-gnome.c:
	* ui.c: Fullscreen toggle -> Fullscreen / Leave Fullscreen.
	Use stock items from games-stock.h. Use actions rather than
	widgets to store UI references.

2005-03-24  Dennis Cranston <dennis_cranston@yahoo.com>

	* ui.c:  Use an etched in shadow for list view.
	
2005-03-23  Dennis Cranston  <dennis_cranston@yahoo.com>

	* ui.c: Make theme dialog more HIG compliant.
	
2005-03-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c: Add a keyboard shortcut for fullscreen mode.

	* same-gnome.schemas.in: Fix typo in the schema file (bug
	#167273).

	* ui.c: Fix typos (bugs #166551 and #167276).

2005-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/same-gnome.xml: Yet more updates. I actually
	spell-checked it this time. Also fixed up one of the pictures, I
	have no idea how a lime green line got down one side of it.

2005-02-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* drawing.c (expose_cb): Make sure we draw the left and bottom
	lines.

	* help/C/same-gnome.xml: More updates. Added a new figure on how
	to play.

2005-02-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* ui.c (game_over_dialog): Make sure we set the category correctly
	for the high score dialog so that if we score on one game, and
	then score in another, the correct category is shown.

	* help/C/same-gnome.xml: More work on the help file. Changed the
	screenshot graphics files.
